--- a/for-internet-shops/index.html
+++ b/for-internet-shops/index.html
@@ -37,7 +37,7 @@
           <img src="/Ticket.svg" class="default" alt="">
           <img src="/TicketActive.svg" class="hover" alt="">
           <div class="card_content">
-            <h2 class="point">Оформите<br><a href="">заявку</a></h2>
+            <h2 class="point">Оформите<br><a href="/contacts/">заявку</a></h2>
             <p class="paragraph">С вами свяжется<br>личный менеджер<br>и всё объяснит</p>
           </div>
         </div>
@@ -45,7 +45,7 @@
           <img src="/Offert.svg" class="default" alt="">
           <img src="/OffertActive.svg" class="hover" alt="">
           <div class="card_content">
-            <h2 class="point">Подпишите<br><a href="https://legal.mm.ru/magnitpost/oferta">офферту</a></h2>
+            <h2 class="point">Подпишите<br><a target="_blank" href="https://legal.mm.ru/magnitpost/oferta">офферту</a></h2>
             <p class="paragraph">Стандартный договор<br>на оказание услуг<br><br></p>
           </div>
         </div>
@@ -54,7 +54,7 @@
           <img src="/Api.svg" class="default" alt="">
           <img src="/ApiActive.svg" class="hover" alt="">
           <div class="card_content">
-            <h2 class="point">Настройте<br><a href="https://magnit-tech.github.io/b2b-api/#tag/Magnit-Post">API-интеграцию</a></h2>
+            <h2 class="point">Настройте<br><a target="_blank" href="https://magnit-tech.github.io/b2b-api/#tag/Magnit-Post">API-интеграцию</a></h2>
             <p class="paragraph">Это позволит удобно
               <br>и технологично
               <br>обмениваться данными
