--- a/index.html
+++ b/index.html
@@ -35,6 +35,68 @@
     </div>
     <a href="" class="CTA_button">Оставить заявку</a>
   </div>
+  <section class="halves padding_half_vertical">
+    <div class="half">
+      <h1 class="title_landing">Станьте ближе<br>к покупателям</h1>
+      <p class="paragraph">Магнит Пост — логистический сервис<br>для интернет-магазинов, который поможет оптимизировать расход на логистику и увеличить географию.</p>
+      <p class="paragraph">Мы доставляем заказы в пункты выдачи<br>в <span class="bold">магазинах Магнит, Магнит Косметик</span><br>и в пункты маркетплейса <span class="bold">Магнит Маркет.</span></p>
+        <div class="flex align_center gap_60">
+          <img src="/magnit.png" alt="">
+          <img src="/magnitMarket.png" alt="">
+          <img src="/magnitCosmetics.png" alt="">
+        </div>
+    </div>
+    <div class="half image_half justify_center">
+      <img class="half_image" src="/phone.jpg" alt="">
+    </div>
+  </section>
+  <section class="flex column rounded_corners background_brand padding_half_vertical align_center section_vertical_padding">
+    <div class="flex column gap_60 width_fit ipad_width_100">
+      <p class="width_100 rounded_corners text_center banner_text box_border banner">
+        Единый тариф — <span class="bold">100 ₽</span></span><br>за одну отправку<br>в любой город присутствия
+      </p>
+      <h2 class="header2">Тариф включает в себя:</h2>
+      <div class="box_container">
+        <div class="background_white box flex column rounded_corners">
+          <img class="default" src="/Item.png" alt="">
+          <img class="hover" src="/ItemActive.gif" alt="">
+          <p>Приём товара<br>на склад</p>
+        </div>
+        <div class="background_white box flex column rounded_corners">
+          <img class="default" src="/Save.png" alt="">
+          <img class="hover" src="/SaveActive.gif" alt="">
+          <p>Страхование<br>отправления​​</p>
+        </div>
+        <div class="background_white box flex column rounded_corners">
+          <img class="default" src="/Delivery.png" alt="">
+          <img class="hover" src="/DeliveryActive.gif" alt="">
+          <p>Доставку<br>до пункта выдачи</p>
+        </div>
+        <div class="background_white box flex column rounded_corners">
+          <img class="default" src="/Saving.png" alt="">
+          <img class="hover" src="/SavingActive.gif" alt="">
+          <p>Хранение 5 дней<br>и бесплатное продление</p>
+        </div>
+        <div class="background_white box flex column rounded_corners">
+          <img class="default" src="/Client.png" alt="">
+          <img class="hover" src="/ClientActive.gif" alt="">
+          <p>Выдачу<br>отправления клиенту</p>
+        </div>
+        <div class="background_white box flex column rounded_corners">
+          <img class="default" src="/Return.png" alt="">
+          <img class="hover" src="/ReturnActive.gif" alt="">
+          <p>Возврат,<br>если он необходим</p>
+        </div>
+      </div>  
+    </div>
+  </section>
+  <section class="flex column padding_half_vertical">
+    <h2 class="header2">Тариф включает в себя:</h2>
+    <div class="AnimatedRow">
+      <img src="" alt="">
+
+    </div>
+  </section>
   <footer class="Footer">
     <div class="justify align_center">
       <div>
