бегущая строка убежала

--- a/index.html
+++ b/index.html
@@ -225,12 +225,33 @@
     <section class="button_middle">
       <a href="" class="CTA_button">Оформить заявку</a>
     </section>
-    <section class="flex column padding_half_vertical">
+    <section class="marquee_container">
+      <h1 class="title_landing">Наши клиенты</h1>
+      <div class="marquee_wrapper">
+        <div class="marquee">
+          <img src="/marquee/dns.jpg" alt="" />
+          <img src="/marquee/bombbar.png" alt="" />
+          <img src="/marquee/bronits.png" alt="" />
+          <img src="/marquee/tasty.svg" alt="" />
+          <img src="/marquee/love_market.svg" alt="" />
+          <img src="/marquee/alik.svg" alt="" />
+        </div>
+        <div class="marquee">
+          <img src="/marquee/dns.jpg" alt="" />
+          <img src="/marquee/bombbar.png" alt="" />
+          <img src="/marquee/bronits.png" alt="" />
+          <img src="/marquee/tasty.svg" alt="" />
+          <img src="/marquee/love_market.svg" alt="" />
+          <img src="/marquee/alik.svg" alt="" />
+        </div>
+      </div>
+    </section>
+    <!-- <section class="flex column padding_half_vertical">
       <h2 class="header2">Тариф включает в себя:</h2>
       <div class="AnimatedRow">
         <img src="" alt="" />
       </div>
-    </section>
+    </section> -->
     <footer class="Footer">
       <div class="justify align_center">
         <div>
